Fixed button alignment at bottom

--- a/css/styles.css
+++ b/css/styles.css
@@ -1650,7 +1650,7 @@ svg {
 }
 
 input[type=checkbox], select {
-  margin: 20px 0;
+  margin: 17px 0;
 }
 
 #timezone-container {
