--- a/scss/components/_settings.scss
+++ b/scss/components/_settings.scss
@@ -31,7 +31,7 @@
 }
 
 input[type="checkbox"], select {
-  margin: 20px 0;
+  margin: 17px 0;
 }
 
 #timezone-container {
